crates/tui/tests/storybook/snapshots/app_status::statusline_width_ladder.step-3.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 18 8
  4   0  18 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  18 fg=AnsiValue(237)
  7   0   8 fg=AnsiValue(244) bg=AnsiValue(234)
  7   8   1 bg=AnsiValue(233)
  7   9   9 fg=AnsiValue(244) bg=AnsiValue(233)
