crates/tui/tests/storybook/snapshots/app_status::statusline_width_ladder.step-4.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




────────────

────────────
   12:34 56%
