crates/tui/tests/storybook/snapshots/app_tool::bash_tool_block_error_output.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
* bash cat missing.txt
  cat: missing.txt: No such file or directory




─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
