crates/tui/tests/storybook/snapshots/app_tool::bash_tool_block_error_output.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 10
  0   0   1 fg=AnsiValue(9)
  0   1   6 attrs=dim
  0   7  15 fg=Rgb { r: 255, g: 255, b: 255 }
  1   2  43 fg=AnsiValue(9)
  6   0   1 fg=AnsiValue(237)
  6   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  6   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  6  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  6  13  44 fg=AnsiValue(237)
  6  57   1 fg=AnsiValue(244)
  6  59   1 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  60 fg=AnsiValue(237)
  9   0  60 bg=AnsiValue(233)
