crates/tui/tests/storybook/snapshots/app_tool::bash_tool_block_with_output.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
* bash git status --short
   M src/lib.rs
  ?? src/new.rs





─ ✿ working… ───────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
